# tg-notes-bot

./: .dockerignore  .gitignore  Dockerfile.airflow  Dockerfile.bot  Dockerfile.picker  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: production_deployment.yml
airflow/dags/: daily_admin_digest.py
app/: constants.py  main.py
app/core/: base.py  config.py  db.py
app/handlers/: start.py
app/keyboards/: inline_kbs.py  text_kbs.py
app/middlewares/: db.py
app/models/: __init__.py  note.py  user.py
app/repositories/: base.py  notes.py  users.py
app/services/: notes.py
bot/: constants.py  main.py
bot/api/: deps.py
bot/celery/: adb.py  aloop.py  main.py  tasks.py  utils.py
bot/core/: base.py  config.py  db.py
bot/handlers/: start.py
bot/keyboards/: callback.py  inline_kbs.py  menu.py  text_kbs.py
bot/middlewares/: db.py
bot/models/: __init__.py  note.py  user.py
bot/repositories/: base.py  notes.py  reminder.py  users.py
bot/schemas/: digest.py
bot/services/: digest.py  notes.py  utils.py  validators.py
bot/utils/: enums.py  text_constructor.py
bot/webhooks/: __init__.py  telegram.py
migrations/: env.py
migrations/versions/: 1b763f52d9b4_inital_schema.py  224015f3e6d1_initial_schema.py  251440131800_added_username.py  2a02db738e6c_updated_user_model.py  32f07aa82a55_switch_tg_id_from_integer_to_big_integer.py  3d5a70321265_updated_users_constaints.py  d97b28111643_initial_schema.py  e5a47c5a09e3_initial_schema.py
web_picker/: main.py
web_picker/core/: config.py  telegram.py
(+18 files in other folders)
